# cmake_example_project_derive_derive

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt  my_calc_derive.c  my_calc_derive.h
libs/: .gitignore  CMakeLists.txt
test/: CMakeLists.txt  main.c
